[project]
name = "molnav"
version = "0.1.0"
description = "MolNav (Molecular Navigator): Navigating the future of molecular modeling."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "sphinxawesome-theme",
    "sphinx-autodoc-typehints>=2.0",
    "myst-parser>=2.0",  # For Markdown support
]
