[project]
name = "molnav"
version = "0.1.0"
description = "MolNav (Molecular Navigator): Navigating the future of molecular modeling."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.0", "ruff"]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "sphinxawesome-theme",
    "sphinx-autodoc-typehints>=2.0",
    "myst-parser>=2.0",              # For Markdown support
]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["molnav"]
known-local-folder = ["."]
length-sort = true
from-first = false
force-single-line = false
combine-as-imports = true
force-sort-within-sections = false
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
    "I",
    "N",
    "UP",
    "PT",
    "RUF",
] # Enable all rules by default, then configure specific rule sets
ignore = [
    "RUF022", # Ignore __all__ sorting check b/c can't be auto-fixed at this time
    "UP006",  # Ignore f-string docstring check b/c it produces false positives in some cases
    "UP007",  # Ignore f-string comment check b/c it produces false positives in some
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
